[project]
name = "seo-friendly-article"
version = "0.1.0"
description = "Minimal runnable API for SEO-Friendly-Article workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
